# agentic-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  agentic  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: PACKS.md
examples/todo-app/: AGENTS.md
examples/todo-app/.agentic/: bundle.yaml
examples/todo-app/.claude/: settings.json
examples/todo-app/.claude/agents/: feature-engineer.md  reviewer.md
examples/todo-app/.claude/skills/discover/: SKILL.md
examples/todo-app/.claude/skills/implement/: SKILL.md
examples/todo-app/.claude/skills/plan/: SKILL.md
examples/todo-app/.claude/skills/qa/: SKILL.md
examples/todo-app/.claude/skills/review/: SKILL.md
examples/todo-app/.claude/skills/ship/: SKILL.md
examples/todo-app/.cursor/: mcp.json
examples/todo-app/.cursor/rules/: feature-engineer.mdc  lifecycle.mdc  reviewer.mdc
examples/todo-app/src/todo/: api.py
examples/todo-app/src/todo/models/: todo.py
src/agentic/: __init__.py  __main__.py  _yaml.py  bundle.py  cli.py  deliver.py  gate.py  ledger.py  mcp.py  observe.py  projector.py  resolve.py  run.py  util.py
tests/: conftest.py  test_bundle.py  test_deliver.py  test_gate.py  test_ledger.py  test_mcp.py  test_projector.py  test_resolve.py  test_run.py  test_util.py  test_yaml.py
