[project]
name = "agentic-cli"
version = "0.0.1"
description = "A supervisory framework for agentic development — define, compile, supervise, record."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Agentic CLI" }]
keywords = [
    "agents",
    "agentic",
    "ai",
    "governance",
    "provenance",
    "claude-code",
    "cursor",
    "devtools",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
# Intentionally zero runtime dependencies. PyYAML is used if present, but a
# built-in YAML fallback keeps the tool installable and runnable anywhere.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://agentic-cli.com"
Repository = "https://github.com/Agentic-CLI/agentic-cli"
Issues = "https://github.com/Agentic-CLI/agentic-cli/issues"

[project.scripts]
agentic = "agentic.cli:main"

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentic = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py39"
